--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "node src/app.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.13"
   }
 }
