--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "kuber",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app.js",
   "repository": "git@github.com:NonsoAmadi10/containers-to-kubernetes.git",
   "author": "Houdini <nonsoamadi@aol.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.13"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
