--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,9 @@ version: "3"
 
 services:
   nodejs:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: nodejs
+    image: nonsoamadi/node-kubernetes
     container_name: nodejs
-    restart: unless-stopped
+    restart: always
     env_file: .env
     environment:
       - MONGO_USERNAME=$MONGO_USERNAME
@@ -16,19 +13,14 @@ services:
       - MONGO_PORT=$MONGO_PORT
       - MONGO_DB=$MONGO_DB
     ports:
-      - "8080:8080"
-    volumes:
-      - .:/usr/src/app
-      - node_modules:/usr/src/app/node_modules
+      - "80:8080"
     networks:
       - app-network
-    command: ./wait-for.sh db:27017 -- yarn dev
 
   db:
     image: mongo:4.1.8-xenial
     container_name: db
-    restart: unless-stopped
-    env_file: .env
+    restart: always
     environment:
       - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
       - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
@@ -43,4 +35,3 @@ networks:
 
 volumes:
   dbdata:
-  node_modules:
